# SpaceSimPlusPlus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md
include/: loadShader.hpp  structs.h  types.h
include/common/: common.hpp  controls.h  error.h  objects.h  objloader.h  physics.h  planets.h  raycast.h  tangentspace.h  vboindexer.h  world.h
include/common/rendering/: debugQuad.h  light.h  render.h  shader.h  shadow.h  text2D.h
include/common/tools/: error.h  loadShader.hpp  raycast.h
include/common/world/: axis.h  box.h  grid.h  object.h  skybox.h
include/glad/: glad.h
src/: main.cpp
src/common/: common.cpp  controls.cpp  error.cpp  glad.c  loadShader.cpp  objloader.cpp  physics.cpp  planets.cpp  raycast.cpp  tangentspace.cpp  text2D.cpp  vboindexer.cpp  world.cpp
src/common/rendering/: debugQuad.cpp  render.cpp  shader.cpp  shadow.cpp  text2D.cpp
src/common/tools/: error.cpp  loadShader.cpp  objloader.cpp  raycast.cpp  vboindexer.cpp
src/common/world/: axis.cpp  box.cpp  grid.cpp  object.cpp  skybox.cpp
src/shaders/: fragmentShader.frag  fragmentShader.glsl  geometryShader.geom  geometryShader.glsl  vertexShader.glsl  vertexShader.vert
src/shaders/debug/: debugDepthFragment.frag
src/shaders/lines/: lineFragmentShader.glsl  lineVertexShader.vert
src/shaders/normals/: normalGeometryShader.geom  normalVertexShader.vert
src/shaders/raycasting/: rayFragmentShader.frag  rayVertexShader.vert
src/shaders/shadows/: shadowFragmentShader.frag  shadowVertexShader.vert
src/shaders/skybox/: skyboxVertexShader.glsl  skyboxVertexShader.vert
src/shaders/text/: textFragmentShader.glsl  textVertexShader.glsl
src/textures/: brick.dds  fontmap.tga  process_results.txt
